opam-version: "1.2"

name: "cryptodbm"
version: "0.82.0"

author: "Didier Le Botlan <github.lebotlan@dfgh.net>"
maintainer: "Didier Le Botlan <github.lebotlan@dfgh.net>"

homepage: "https://github.com/lebotlan/ocaml-cryptodbm"
bug-reports: "https://github.com/lebotlan/ocaml-cryptodbm/issues"
dev-repo: "git://github.com/lebotlan/ocaml-cryptodbm.git"

license: "MIT License"

depends: [
         "ocamlfind"
         "jbuilder"
         "dbm"
         "fileutils"
         "cryptokit"
         ]

build: [["jbuilder" "build" "-p" name "-j" jobs]]
